--- a/app/src/main/java/view/MainScreen.form
+++ b/app/src/main/java/view/MainScreen.form
@@ -419,9 +419,9 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jLabelTasksAdd" pref="73" max="32767" attributes="0"/>
+                      <Component id="jLabelTasksTitle" pref="73" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="376" max="-2" attributes="0"/>
-                      <Component id="jLabelTasksTitle" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="jLabelTasksAdd" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -431,8 +431,8 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelTasksTitle" max="32767" attributes="0"/>
-                          <Component id="jLabelTasksAdd" pref="38" max="32767" attributes="0"/>
+                          <Component id="jLabelTasksAdd" max="32767" attributes="0"/>
+                          <Component id="jLabelTasksTitle" pref="38" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -440,7 +440,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="jLabelTasksTitle">
+            <Component class="javax.swing.JLabel" name="jLabelTasksAdd">
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
@@ -448,10 +448,10 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelTasksTitleMouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelTasksAddMouseClicked"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabelTasksAdd">
+            <Component class="javax.swing.JLabel" name="jLabelTasksTitle">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
